<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePassword">
    <!--修改密码布局-->

    <!--三个线性布局包围住三个EditText-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/oldPasswordInChange_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--原密码-->
        <com.rey.material.widget.EditText
            android:id="@+id/oldPasswordInChange_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/oldPasswordHint"
            android:inputType="textPassword"
            android:textSize="25sp"
            app:et_dividerColor="#00C853"
            app:et_dividerErrorColor="#DD2C00"
            app:et_dividerHeight="2dp"
            app:et_dividerPadding="5dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="#304FFE"
            app:et_labelTextSize="20sp"
            app:et_supportMode="helper"
            app:et_supportTextColor="#B8E6ED"
            app:et_supportTextErrorColor="#FF6D00"
            app:et_supportTextSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/showOldPasswordInChange_Button"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/hide"
            app:layout_constraintBottom_toBottomOf="@id/oldPasswordInChange_EditText"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/oldPasswordHint" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newPasswordInChange_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordInChange_Layout">

        <!--新密码-->
        <com.rey.material.widget.EditText
            android:id="@+id/newPasswordInChange_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/newPasswordHint"
            android:inputType="textPassword"
            android:textSize="25sp"
            app:et_dividerColor="#00C853"
            app:et_dividerErrorColor="#DD2C00"
            app:et_dividerHeight="2dp"
            app:et_dividerPadding="5dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="#304FFE"
            app:et_labelTextSize="20sp"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="#FF6D00"
            app:et_supportTextSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/showNewPasswordInChange_Button"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/hide"
            android:contentDescription="@string/newPasswordHint"
            app:layout_constraintBottom_toBottomOf="@id/newPasswordInChange_EditText"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/assurePasswordInChange_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordInChange_Layout">

        <!--重复新密码-->
        <com.rey.material.widget.EditText
            android:id="@+id/assurePasswordInChange_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/assurePasswordHint"
            android:inputType="textPassword"
            android:textSize="25sp"
            app:et_dividerColor="#00C853"
            app:et_dividerErrorColor="#DD2C00"
            app:et_dividerHeight="2dp"
            app:et_dividerPadding="5dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="#304FFE"
            app:et_labelTextSize="20sp"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="#FF6D00"
            app:et_supportTextSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/showAssurePasswordInChange_Button"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/hide"
            android:contentDescription="@string/assurePasswordHint"
            app:layout_constraintBottom_toBottomOf="@id/assurePasswordInChange_EditText"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.rey.material.widget.Button
        android:id="@+id/sureForChangePassword_Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assurePasswordInChange_layout"
        app:layout_constraintVertical_bias="0.208"
        android:background="@drawable/round_button"
        android:text="@string/assureForChangeText"
        android:textSize="30sp"
        app:rd_backgroundColor="#B6E6D8"
        app:rd_cornerRadius="10dp"
        app:rd_delayClick="untilRelease"
        app:rd_enable="true"
        app:rd_maskType="rectangle"
        app:rd_maxRippleRadius="70dp"
        app:rd_rippleColor="#F9E8FB"
        app:rd_rippleType="touch" />

    <!--加载progressBar,五颜六色-->
    <com.tt.whorlviewlibrary.WhorlView
        android:id="@+id/changePasswordProgressBar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:whorlview_circle_colors="#FFAB00_#FFC0CB_#698FF8_#FF0066_#AA00FF"
        app:whorlview_circle_speed="270"
        app:whorlview_parallax="fast"
        app:whorlview_strokeWidth="10"
        app:whorlview_sweepAngle="140">
    </com.tt.whorlviewlibrary.WhorlView>

</androidx.constraintlayout.widget.ConstraintLayout>